env/lab/lab-grafana-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lab-grafana-route
  namespace: monitoring
  annotations:
    gethomepage.dev/href: https://grafana
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Metrics
    gethomepage.dev/group: monitoring
    gethomepage.dev/name: Grafana
    gethomepage.dev/widget.type: Grafana
    gethomepage.dev/widget.url: https://grafana
spec:
  routes:
    - match: Headers("Service", "grafana")
      kind: Rule
      services:
        - name: grafana
          port: 80
